src/test/ui/symbol-names/issue-75326.v0.stderr
error: symbol-name(_RNvXINICs4fqI2P2rA04_11issue_75326s_0pppEINtB5_3FooppENtB5_9Iterator24nextB5_)
  --> $DIR/issue-75326.rs:43:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling(<issue_75326[317d481089b8c8fe]::Foo<_, _> as issue_75326[317d481089b8c8fe]::Iterator2>::next)
  --> $DIR/issue-75326.rs:43:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(<issue_75326::Foo<_, _> as issue_75326::Iterator2>::next)
  --> $DIR/issue-75326.rs:43:5
   |
LL |     #[rustc_symbol_name]
   |     ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

